Fix floor plan image hover overlay not showing in IE, resolves #824

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -2931,7 +2931,7 @@ div.wysiwyg ul li {
 	}
 
   a.floor-plan-view-full {
-		background: transparent !important
+		background: transparent !important;
     display: block;
 		padding-left: 0 !important;
 	}
